@@ -21,7 +21,9 @@ penalty-time: 10
 bail-per-second: 100
 #OPs can't be jailed?
 op-can-be-jailed: true
+#Enable frequent scheduled auto update checker? (TODO)
+scheduled-update-checker: false
 
 ### Config updater ###
 #Do not modify this, otherwise plugin may not work properly
-v: Pre-alpha0.6
+v: Pre-alpha0.7
